# secret-santa

./: .dockerignore  .env.example  .gitignore  Dockerfile.development  Dockerfile.production  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml
app/: manage.py
app/core/: asgi.py  settings.py  urls.py  wsgi.py
app/home/: urls.py
app/home/templates/: base.html
