[project]
name = "secret-santa"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.8",
    "django-widget-tweaks==1.5.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.2.1",
    "blacknoise==1.2.0",
    "daphne==4.2.1",
]

[dependency-groups]
dev = [
    "ruff==0.6",
    "faker==37.3.0",
    "django-browser-reload==1.21.0",
    "django-debug-toolbar==6.1.0",
    "django-watchfiles==1.4.0",
]
